<resources>
    <string name="app_name">Digital Reader</string>


    <string name="press_again_exit_app">Press again to exit</string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_topic">Topics</string>
    <string name="title_menu_saved">Bookmarks</string>
    <string name="title_menu_more">More Apps</string>
    <string name="title_menu_rate">Rate This</string>
    <string name="title_menu_about">About</string>
    <string name="logout_confirmation_text">Are you sure want to logout?</string>
    <string name="msg_app_out_date">Application is out of date, please update to get latest version</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="title_info">Info</string>
    <string name="section_topics">Topics</string>
    <string name="section_featured">Featured</string>
    <string name="section_recent">Recent</string>
    <string name="news_type_gallery">Gallery</string>
    <string name="news_type_video">Video</string>
    <string name="news_type_article">Article</string>
    <string name="confirmation">confirmation</string>
    <string name="CANCEL">CANCEL</string>
    <string name="YES">YES</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_bt_login">Login</string>
    <string name="forgot_password">Forget Password</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="title_activity_register">Register Now!</string>
    <string name="skip">Skip</string>
    <string name="popular_on_medium">Featured Posts</string>
    <string name="popular_post">Popular posts</string>
    <string name="title_location_permission">title_location_permission</string>
    <string name="text_location_permission">text_location_permission</string>
    <string name="ok">OK</string>
    <string name="NEXT">NEXT</string>
    <string name="GOT_IT">Got It</string>
    <string name="setting_group_profile">Profile Setting</string>
    <string name="setting_subtitle_name">Name</string>
    <string name="setting_subtitle_email">Email</string>
    <string name="our_email">pixeldesigndevelopers@gmail.com</string>
    <string name="setting_title_copyright">"Copyright@2020 "</string>
    <string name="build_version">1.0</string>
    <string name="setting_title_term">Terms&amp; Policies</string>
    <string name="email_copied">Copied!</string>
    <string name="pref_title_contact_us">Contact Us</string>
    <string name="developer_email">Admin@gmail.com</string>
    <string name="OK">OK</string>
    <string name="failed_text">Something went wrong</string>
    <string name="failed_text_post">Something went wrong or Posts Are Not Available.</string>
    <string name="failed_when_load">Failed when load data</string>
    <string name="no_internet_text">You are offline</string>
    <string name="no_item">No Item</string>
    <string name="msg_data_loaded">Data loaded</string>
    <string name="title_delete_confirm">Delete Confirmation</string>
    <string name="content_delete_confirm">Are you sure want to delete all&#160;</string>
    <string name="delete_success">Delete successfully</string>
    <string name="msg_copied_clipboard">Text copied to clipboard</string>
    <string name="account_disabled">account is disable!</string>
    <string name="invalid_email_password">invalid email password</string>
    <string name="settings">Settings</string>
    <string name="RETRY">Retry</string>
    <string name="Input_Search">Input Search</string>
    <string name="razor_api_key">rzp_test_Lw4MeCsvDdPX73</string>
    <string name="title_dialog_forgot_password">Forgot Password</string>
    <string name="email_not_registered">Email Not Registered</string>
    <string name="email_sent_info">Password has been send to Registered email.</string>
    <string name="profile_email_empty">Email Cannot Empty.</string>
    <string name="profile_email_invalid">Invalid Email</string>
    <string name="dummy_text">DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020 DESIGN Top 10 Logo Design Trends and Templates 2020 First impressions are important. That’s why it’s essential to keep up with the latest logo trends to ensure your personal or business branding always looks fresh. Portrait for Helen Alexander By Helen Alexander Posted 19 Apr 2020</string>
    <string name="email_in_use">Email Already Used</string>
    <string name="account_not_found">Account Not Found</string>
    <string name="text_update">update</string>
    <string name="text_Recp">View Receipt</string>
    <string name="lorem_ipsum">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="Top_Ideas">Ideas!</string>
    <string name="failed_save">Falied to save</string>
    <string name="todo">TODO</string>
    <string name="msg_token_fmt">fcm msg</string>
    <string name="medium_lorem_ipsum">Hello Everyone, Digital Reader App is made for the people who love reading or writing a posts. keep reading. \n Thank You!</string>
</resources>
