<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layout_trendpost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txt_trend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:padding="5dp"
                        android:text="@string/popular_on_medium"
                        android:textColor="@color/colorTextAction"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_trend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_trend"
                        android:layout_marginTop="5dp"
                        android:scrollingCache="true" />
                </LinearLayout>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:shimmer_auto_start="false"
                    app:shimmer_duration="800">

                    <include layout="@layout/mainscreen_shimmer" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <Button
                    android:id="@+id/btn_pay"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@id/layout_trendpost"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_btn"
                    android:text="pay for premium"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/layout_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_pay"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/layout_topic"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_new"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:padding="5dp"
                            android:text="@string/section_topics"
                            android:textColor="@color/colorTextAction"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_viewmoreTopic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="5dp"
                            android:padding="5dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="viewmore"
                            android:textColor="@color/colorTextAction"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_all_topics"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:scrollingCache="true" />
                </LinearLayout>

                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_topic"
                    android:layout_centerHorizontal="true"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="ca-app-pub-7783850843188004/8032321198" />

                <LinearLayout
                    android:id="@+id/layout_allpostlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/adView"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/layout_topic"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_post"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="5dp"
                            android:padding="5dp"
                            android:text="@string/popular_post"
                            android:textColor="@color/colorTextAction"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_viewmorePost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="5dp"
                            android:padding="5dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="viewmore"
                            android:textColor="@color/colorTextAction"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_all_post"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/txt_post"
                        android:background="@color/colorBackground"
                        android:scrollingCache="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_failed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:paddingBottom="?attr/actionBarSize"
                    android:visibility="gone">

                    <include layout="@layout/nointernet_lyt" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>